# devcast

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  crypto.py  db.py  main.py  security.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 015e45a48b54_baseline_schema.py  48b7354e1931_repo_tracking_mode_and_summary_depth.py  62a438b77381_user_timezone.py
backend/app/api/: auth.py  calendar.py  commits.py  deps.py  events.py  integrations.py  operator.py  repos.py  webhooks.py
backend/app/models/: __init__.py  change.py  commit.py  common.py  integration.py  notion_link.py  operator.py  project_profile.py  repository.py  user.py
backend/app/schemas/: auth.py  commit.py  integration.py  operator.py  repo.py
backend/app/services/: credentials.py  events.py  github_app.py  google_calendar.py  matcher.py  notion.py
backend/app/services/llm/: anthropic.py  base.py  factory.py  openai_compat.py  registry.py
backend/app/workers/: queue.py  tasks.py
backend/tests/: conftest.py  test_unit.py
deploy/: nginx-nightlabs.ru.conf
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  useEventStream.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: CommitModal.tsx  Layout.tsx  Select.tsx  StatusBadge.tsx  icons.tsx  logos.ts
frontend/src/lib/: time.ts
frontend/src/pages/: Calendar.tsx  Dashboard.tsx  Integrations.tsx  Login.tsx  (+3 more)
