[project]
name = "devcast-backend"
version = "0.1.0"
description = "DevCast — live translation of git commits into human language, mirrored to Notion"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "email-validator>=2.1",
    "pydantic-settings>=2.3",
    "bcrypt>=4.1",
    "cryptography>=42",
    "httpx>=0.27",
    "arq>=0.26",
    "redis>=5.0",
    "PyJWT>=2.8",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "anyio>=4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
